# SysOpy-cw4

zad1/: CMakeLists.txt  main.c
zad2/: CMakeLists.txt  catcher.c  catcher2.c  catcher3.c  ksiadz.h  ksiadz2.h  ksiadz3.h  main2.c  sender.c  sender2.c  sender3.c
